# wani-panicker

./: .gitignore  README.md  demo_simple_ai_jetson.sh  motion_editor.py  motion_utils.py  pyproject.toml  rules.md  setup_jetson.sh  setup_jetson_lerobot.sh  wani_detector.py  wani_panicker.py  wani_player.py
3d_parts/: Moving_Jaw_Hammer_Head.stl  Moving_Jaw_Hammer_Rod.stl
config/: 99-lerobot-serial.rules
motions/: motion_wani_00.json  motion_wani_00_02.json  motion_wani_01.json  motion_wani_02.json  motion_wani_03.json  motion_wani_04.json  motion_wani_05.json
