[tool.uv]
dev-dependencies = [
    "ruff==0.9.1",
]

[tool.uv.sources]

[project]
name = "workspace"
version = "0.1.0"
description = "Workspace for lerobot tools"
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "lerobot[feetech]",
    "onnxruntime>=1.22.1",
]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
